fix [MS]: close CSV readers so Windows release tests pass